--- a/app/src/main/res/layout/header_view_operation.xml
+++ b/app/src/main/res/layout/header_view_operation.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="80dp"
     android:background="@color/md_grey_300"
     android:orientation="horizontal"
     tools:ignore="HardcodedText,RtlSymmetry,SpUsage,ContentDescription">
@@ -10,10 +10,9 @@
 
     <LinearLayout
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_weight="1"
         android:gravity="center"
-        android:padding="8dp"
         android:background="@color/md_white"
         android:orientation="vertical">
 
@@ -36,10 +35,9 @@
         android:layout_marginEnd="1px"
         android:layout_marginStart="1px"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_weight="1"
         android:gravity="center"
-        android:padding="8dp"
         android:background="@color/md_white"
         android:orientation="vertical">
 
@@ -60,10 +58,9 @@
 
     <LinearLayout
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_weight="1"
         android:gravity="center"
-        android:padding="8dp"
         android:background="@color/md_white"
         android:orientation="vertical">
 
