--- a/app/src/main/res/layout/item_flow_node.xml
+++ b/app/src/main/res/layout/item_flow_node.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/md_white"
+    android:id="@+id/root"
+    android:background="?attr/selectableItemBackground"
     android:gravity="center_vertical"
     android:orientation="horizontal"
     android:padding="16dp"
@@ -18,6 +19,8 @@
         android:textSize="14dp" />
 
     <ImageView
+        android:id="@+id/ivArrow"
+        android:visibility="invisible"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="12dp"
