--- a/app/src/main/res/layout/item_spyj.xml
+++ b/app/src/main/res/layout/item_spyj.xml
@@ -1,12 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/tvName"
     android:layout_width="match_parent"
-    android:layout_height="56dp"
-    android:background="@color/md_white"
-    android:gravity="center_vertical"
-    android:paddingStart="16dp"
-    android:textSize="16dp"
-    tools:ignore="RtlSymmetry,SpUsage" />
+    android:layout_height="wrap_content"
+    android:layout_marginEnd="16dp"
+    android:layout_marginStart="16dp"
+    android:layout_marginTop="16dp"
+    android:background="@color/md_grey_300"
+    android:orientation="vertical"
+    android:padding="1px"
+    tools:ignore="RtlSymmetry,SpUsage,ContentDescription">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:background="@color/md_white"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_marginStart="12dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/user111" />
+
+        <TextView
+            android:layout_marginStart="4dp"
+            android:id="@+id/tvSpyjSprName"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:textColor="@color/md_black"
+            android:textSize="16dp" />
+
+        <TextView
+            android:layout_marginEnd="12dp"
+            android:id="@+id/tvSysTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/md_grey_500"
+            android:textSize="14dp" />
+
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/tvSpyj"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_marginTop="1px"
+        android:background="@color/md_white"
+        android:textColor="@color/md_black" />
+
+</LinearLayout>
