--- a/app/src/main/res/layout/item_flow_node.xml
+++ b/app/src/main/res/layout/item_flow_node.xml
@@ -20,10 +20,9 @@
 
     <ImageView
         android:id="@+id/ivArrow"
-        android:visibility="invisible"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="12dp"
-        android:src="@mipmap/xfy" />
+        android:src="@mipmap/arrow" />
 
 </LinearLayout>
