--- a/app/src/main/res/layout/header_view_nbfw.xml
+++ b/app/src/main/res/layout/header_view_nbfw.xml
@@ -121,14 +121,11 @@
             android:textColor="@color/md_grey_700"
             android:textSize="14dp" />
 
-        <EditText
-            android:id="@+id/etZsmc"
+        <TextView
+            android:id="@+id/tvZsmc"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:enabled="false"
             android:layout_weight="1"
-            android:background="@null"
-            android:inputType="text"
             android:textColor="@color/md_grey_400"
             android:textSize="14dp" />
 
@@ -149,11 +146,8 @@
             android:textColor="@color/md_grey_700"
             android:textSize="14dp" />
 
-        <EditText
-            android:enabled="false"
-            android:background="@null"
-            android:inputType="text"
-            android:id="@+id/etCsmc"
+        <TextView
+            android:id="@+id/tvCsmc"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
