--- a/app/src/main/res/layout/item_dept.xml
+++ b/app/src/main/res/layout/item_dept.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/tvName"
+    android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="56dp"
     android:background="@color/md_white"
