--- a/app/src/main/res/layout/act_spyj.xml
+++ b/app/src/main/res/layout/act_spyj.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/md_grey_100"
     android:orientation="vertical"
     tools:ignore="HardcodedText,RtlSymmetry,SpUsage,ContentDescription">
 
@@ -21,9 +22,11 @@
         android:id="@+id/etSpyj"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:background="@null"
+        android:background="@color/md_white"
+        android:gravity="start|top"
         android:hint="请在此填写您的审批意见"
         android:inputType="text"
+        android:padding="16dp"
         android:textColor="@color/md_black"
         android:textSize="16dp" />
 
