--- a/app/src/main/res/layout/item_spyj.xml
+++ b/app/src/main/res/layout/item_spyj.xml
@@ -9,7 +9,8 @@
     android:background="@color/md_grey_300"
     android:orientation="vertical"
     android:padding="1px"
-    tools:ignore="RtlSymmetry,SpUsage,ContentDescription">
+
+    tools:ignore="LabelFor,RtlSymmetry,SpUsage,ContentDescription">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,36 +20,37 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:layout_marginStart="12dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
             android:src="@mipmap/user111" />
 
         <TextView
-            android:layout_marginStart="4dp"
             android:id="@+id/tvSpyjSprName"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:layout_weight="1"
             android:textColor="@color/md_black"
             android:textSize="16dp" />
 
         <TextView
-            android:layout_marginEnd="12dp"
             android:id="@+id/tvSysTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="12dp"
             android:textColor="@color/md_grey_500"
             android:textSize="14dp" />
 
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/tvSpyj"
+    <EditText
+        android:id="@+id/etSpyj"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_marginTop="1px"
         android:background="@color/md_white"
+        android:inputType="text"
         android:textColor="@color/md_black" />
 
 </LinearLayout>
