--- a/app/src/main/res/layout/item_court.xml
+++ b/app/src/main/res/layout/item_court.xml
@@ -3,10 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/tvDmms"
     android:layout_width="match_parent"
-    android:layout_height="56dp"
-    android:background="@color/md_white"
+    android:layout_height="wrap_content"
+    android:background="?attr/selectableItemBackground"
     android:gravity="center_vertical"
-    android:paddingStart="16dp"
+    android:padding="16dp"
     android:textColor="@color/md_black"
     android:textSize="16dp"
     tools:ignore="RtlSymmetry,SpUsage" />
