--- a/app/src/main/res/layout/item_dept.xml
+++ b/app/src/main/res/layout/item_dept.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/root"
+    android:id="@+id/tvText"
     android:layout_width="match_parent"
-    android:layout_height="56dp"
-    android:background="@color/md_white"
+    android:layout_height="wrap_content"
     android:gravity="center_vertical"
-    android:paddingStart="16dp"
+    android:padding="16dp"
     android:textColor="@color/md_black"
     android:textSize="16dp"
     tools:ignore="RtlSymmetry,SpUsage" />
+
 
