--- a/app/src/main/res/layout/header_menu.xml
+++ b/app/src/main/res/layout/header_menu.xml
@@ -2,22 +2,24 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="48dp"
+    android:layout_height="wrap_content"
     android:gravity="center_vertical"
     android:orientation="horizontal"
-    tools:ignore="SpUsage,HardcodedText">
+    android:paddingBottom="16dp"
+    android:paddingStart="16dp"
+    android:paddingTop="20dp"
+    tools:ignore="HardcodedText,RtlSymmetry,SpUsage">
 
     <View
         android:layout_width="2dp"
         android:layout_height="15dp"
-        android:layout_marginStart="16dp"
         android:background="@color/colorPrimary" />
 
     <TextView
         android:id="@+id/tvText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="6dp"
         android:textColor="@color/md_grey_600"
         android:textSize="15dp" />
 
