--- a/app/src/main/res/layout/item_dbxx.xml
+++ b/app/src/main/res/layout/item_dbxx.xml
@@ -29,7 +29,7 @@
         android:id="@+id/ivImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="24dp"
+        android:layout_marginEnd="32dp"
         android:src="@mipmap/sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -38,10 +38,11 @@
 
     <TextView
         android:id="@+id/tvNodeName"
-        android:layout_width="wrap_content"
+        android:layout_width="60dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="核稿"
+        android:gravity="center"
         android:textColor="@color/md_black"
         android:textSize="13dp"
         app:layout_constraintEnd_toEndOf="@+id/ivImage"
