--- a/app/src/main/res/layout/item_spyj.xml
+++ b/app/src/main/res/layout/item_spyj.xml
@@ -3,25 +3,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginEnd="16dp"
-    android:layout_marginStart="16dp"
-    android:layout_marginTop="16dp"
-    android:background="@color/md_grey_300"
     android:orientation="vertical"
-    android:padding="1px"
-    tools:ignore="LabelFor,RtlSymmetry,SpUsage,ContentDescription">
+    tools:ignore="LabelFor,RtlSymmetry,SpUsage,ContentDescription,HardcodedText">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:background="@color/md_white"
         android:gravity="center_vertical"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:padding="16dp">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
             android:src="@mipmap/user111" />
 
         <TextView
@@ -31,7 +26,7 @@
             android:layout_marginStart="4dp"
             android:layout_weight="1"
             android:textColor="@color/md_black"
-            android:textSize="16dp" />
+            android:textSize="14dp" />
 
         <TextView
             android:id="@+id/tvSysTime"
@@ -46,10 +41,14 @@
     <EditText
         android:id="@+id/etSpyj"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="1px"
         android:background="@color/md_white"
+        android:gravity="start|top"
+        android:hint="请输入审批意见"
         android:inputType="text"
+        android:paddingBottom="16dp"
         android:textColor="@color/md_black" />
 
 </LinearLayout>
