--- a/app/src/main/res/layout/header_view_nbfw.xml
+++ b/app/src/main/res/layout/header_view_nbfw.xml
@@ -116,7 +116,7 @@
             android:textSize="14dp" />
 
         <TextView
-            android:="@+id/tvZsmc"
+            android:id="@+id/tvZsmc"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
