--- a/app/src/main/res/layout/item_text.xml
+++ b/app/src/main/res/layout/item_text.xml
@@ -6,7 +6,8 @@
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
     android:padding="16dp"
+    android:background="@color/md_white"
     android:textColor="@color/md_black"
     android:textSize="16dp"
-    tools:ignore="RtlSymmetry,SpUsage" />
+    tools:ignore="SpUsage" />
 
