--- a/app/src/main/res/layout/header_view_wbfw.xml
+++ b/app/src/main/res/layout/header_view_wbfw.xml
@@ -106,6 +106,7 @@
             android:inputType="text"
             android:textColor="@color/md_grey_400"
             android:textSize="14dp" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -119,12 +120,12 @@
         <TextView
             android:layout_width="@dimen/detail_width"
             android:layout_height="wrap_content"
-            android:text="主送"
+            android:text="密级"
             android:textColor="@color/md_grey_700"
             android:textSize="14dp" />
 
         <TextView
-            android:id="@+id/tvZsmc"
+            android:id="@+id/tvMj"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -144,16 +145,54 @@
         <TextView
             android:layout_width="@dimen/detail_width"
             android:layout_height="wrap_content"
-            android:text="抄送"
+            android:text="校对人"
             android:textColor="@color/md_grey_700"
             android:textSize="14dp" />
 
-        <TextView
-            android:id="@+id/tvCsmc"
+        <EditText
+            android:id="@+id/tvJdr"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:background="@null"
+            android:enabled="false"
+            android:inputType="text"
             android:textColor="@color/md_grey_400"
+            android:textSize="14dp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="1px"
+        android:background="@color/md_white"
+        android:orientation="horizontal"
+        android:padding="16dp">
+
+        <TextView
+            android:layout_width="@dimen/detail_width"
+            android:layout_height="wrap_content"
+            android:text="印刷数量"
+            android:textColor="@color/md_grey_700"
+            android:textSize="14dp" />
+
+        <EditText
+            android:id="@+id/tvYssl"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@null"
+            android:enabled="false"
+            android:inputType="text"
+            android:textColor="@color/md_grey_400"
+            android:textSize="14dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="份"
+            android:textColor="@color/md_grey_700"
             android:textSize="14dp" />
 
     </LinearLayout>
