--- a/app/src/main/res/layout/act_spd_next.xml
+++ b/app/src/main/res/layout/act_spd_next.xml
@@ -16,13 +16,13 @@
         android:orientation="horizontal">
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/recyclerView1"
+            android:id="@+id/flowRecyclerView"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1" />
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/recyclerView2"
+            android:id="@+id/userRecyclerView"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1" />
