--- a/app/src/main/res/layout/header_view_sbwx.xml
+++ b/app/src/main/res/layout/header_view_sbwx.xml
@@ -61,12 +61,12 @@
         <TextView
             android:layout_width="@dimen/detail_width"
             android:layout_height="wrap_content"
-            android:text="经办部门"
+            android:text="经办单位"
             android:textColor="@color/md_grey_700"
             android:textSize="14dp" />
 
         <TextView
-            android:id="@+id/tvJbbm"
+            android:id="@+id/tvJbdw"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -86,12 +86,12 @@
         <TextView
             android:layout_width="@dimen/detail_width"
             android:layout_height="wrap_content"
-            android:text="拟稿人"
+            android:text="经办人"
             android:textColor="@color/md_grey_700"
             android:textSize="14dp" />
 
         <TextView
-            android:id="@+id/tvNgr"
+            android:id="@+id/tvJbr"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -111,12 +111,12 @@
         <TextView
             android:layout_width="@dimen/detail_width"
             android:layout_height="wrap_content"
-            android:text="主送"
+            android:text="时间"
             android:textColor="@color/md_grey_700"
             android:textSize="14dp" />
 
         <TextView
-            android:id="@+id/tvZsmc"
+            android:id="@+id/tvSj"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -136,15 +136,93 @@
         <TextView
             android:layout_width="@dimen/detail_width"
             android:layout_height="wrap_content"
-            android:text="抄送"
+            android:text="设备名称及安装地点"
             android:textColor="@color/md_grey_700"
             android:textSize="14dp" />
 
         <TextView
-            android:id="@+id/tvCsmc"
+            android:id="@+id/tvWxxq"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textColor="@color/md_grey_400"
+            android:textSize="14dp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="1px"
+        android:background="@color/md_white"
+        android:orientation="horizontal"
+        android:padding="16dp">
+
+        <TextView
+            android:layout_width="@dimen/detail_width"
+            android:layout_height="wrap_content"
+            android:text="故障现象及维修办法"
+            android:textColor="@color/md_grey_700"
+            android:textSize="14dp" />
+
+        <TextView
+            android:id="@+id/tvWxff"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textColor="@color/md_grey_400"
+            android:textSize="14dp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="1px"
+        android:background="@color/md_white"
+        android:orientation="horizontal"
+        android:padding="16dp">
+
+        <TextView
+            android:layout_width="@dimen/detail_width"
+            android:layout_height="wrap_content"
+            android:text="设备维修预算经费（单位元）"
+            android:textColor="@color/md_grey_700"
+            android:textSize="14dp" />
+
+        <TextView
+            android:id="@+id/tvWxysjf"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textColor="@color/md_grey_400"
+            android:textSize="14dp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="1px"
+        android:background="@color/md_white"
+        android:orientation="horizontal"
+        android:padding="16dp">
+
+        <TextView
+            android:layout_width="@dimen/detail_width"
+            android:layout_height="wrap_content"
+            android:text="处理结果"
+            android:textColor="@color/md_grey_700"
+            android:textSize="14dp" />
+
+        <EditText
+            android:id="@+id/tvCljg"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@null"
+            android:enabled="false"
+            android:inputType="text"
             android:textColor="@color/md_grey_400"
             android:textSize="14dp" />
 
