--- a/app/src/main/res/layout/header_view_sqrq.xml
+++ b/app/src/main/res/layout/header_view_sqrq.xml
@@ -186,12 +186,13 @@
         <TextView
             android:layout_width="@dimen/detail_width"
             android:layout_height="wrap_content"
-            android:text="请假种类"
+            android:text="休假种类及年度"
+            android:paddingEnd="16dp"
             android:textColor="@color/md_grey_700"
             android:textSize="14dp" />
 
         <TextView
-            android:id="@+id/tvQjzl"
+            android:id="@+id/tvXjzl"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
