--- a/app/src/main/res/layout/title_bar.xml
+++ b/app/src/main/res/layout/title_bar.xml
@@ -7,6 +7,17 @@
     android:background="@color/colorPrimary"
     tools:ignore="HardcodedText,SpUsage">
 
+    <ImageView
+        android:id="@+id/ivBack"
+        android:layout_width="64dp"
+        android:layout_height="match_parent"
+        android:src="@mipmap/fanhui"
+        android:scaleType="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
     <TextView
         android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
