--- a/app/src/main/res/layout/act_spd_next.xml
+++ b/app/src/main/res/layout/act_spd_next.xml
@@ -17,7 +17,7 @@
         android:orientation="horizontal">
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/rvSequenceFlow"
+            android:id="@+id/rvFlow"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1" />
